--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "com.unity.xr.oculusperformanceutility",
   "displayName": "Unity XR Oculus Performance Utility",
   "version": "0.1.0-preview",
-  "unity": "2018.1",
-  "description": "Exposed methods and properties used in Oculus Performance Testing."
+  "unity": "2019.3",
+  "description": "Utility methods used to measure Oculus Performance in Unity."
 }
